# ximea_camera

./: CMakeLists.txt  README  README.md  package.xml
cfg/: ximea.cfg  ximea.cfg.backup
config/: cam3.yaml  ximea1.yaml.save  ximea1.yaml~  ximea2.yaml~  ximea3.yaml~  ximea4.yaml  ximea4.yaml~  ximea5.yaml
config/backup/: ximea1.yaml  ximea2.yaml
include/ximea_camera/: ximea_driver.h  ximea_ros_cluster.h  ximea_ros_driver.h
launch/: mono_config.launch  quad_config.launch  stereo_config.launch  ximea_camera.launch  ximea_camera1.launch  ximea_camera1_outdoors.launch  ximea_camera2.launch  ximea_camera2_outdoors.launch  ximea_camera3.launch  ximea_camera3_outdoors.launch
src/: cam1.yaml  cam4.yaml  ximea.cpp  ximea_driver.cpp  ximea_driver.h  ximea_old.cpp  ximea_old_test.cpp  ximea_ros_cluster.cpp  ximea_ros_cluster.h  ximea_ros_driver.cpp  ximea_ros_driver.h
